# excel-pipeline-aws

./: .gitignore  README.md  pyproject.toml  requirements-lambda-layer.txt  response.json
configs/: wood_sales_config.json
docs/: SDD
docs/SDD_public/: README.md  decisions_log.md  methodology.md  overview.md  pipeline_design.md
docs/deployment/: aws_cli.md
src/excel_pipeline/: cli.py
src/excel_pipeline/cloud/: lambda_handler.py  s3_io.py
src/excel_pipeline/config/: loader.py
src/excel_pipeline/orchestration/: execution_log.py  pipeline.py
src/excel_pipeline/stage_1_consolidation/: consolidation.py  ingestion.py  mapping.py  normalization.py
src/excel_pipeline/stage_2_cleaning/: cleaning.py  deduplication.py  null_handling.py  standardization.py  type_coercion.py  validation.py
src/excel_pipeline/stage_3_formatting/: formats.py  report_writer.py  template_rules.py
tests/integration/: test_pipeline.py  test_report_writer.py
tests/unit/: test_cleaning.py  test_cli.py  test_cloud.py  test_config_loader.py  test_deduplication.py  test_execution_log.py  test_template_rules.py  test_type_coercion.py
